--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,14 @@
   box-sizing: border-box;
 }
 
+html {
+  line-height: 1.15;
+}
+
+body {
+  background: #fff;
+}
+
 .App {
-  display: flex;
+  
 }
