--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,8 @@
 .header {
-    height: 100vh;
-    width: 260px;
     background: var(--blue);
+    background-size: 300px;
+    background-repeat: no-repeat;
+    background-position: -100px bottom;
+    z-index: 30;
+    overflow: auto;
 }
