--- a/src/components/Overview.css
+++ b/src/components/Overview.css
@@ -1,47 +1,3 @@
 .overview {
-
-}
-
-.overview__hero {
-    background: var(--dark-gray);
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding: 0 1em;
-    background-position: center 0px;
-}
-
-.overview__hero h1 {
-    color: #fff;
-    padding: 150px 0 0;
-    text-align: center;
-    line-height: 50px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 2rem;
-    font-family: Raleway, sans-serif;
-    font-weight: 900;
-}
-
-.overview__hero hr {
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
-    border-bottom: 5px solid #fff;
-    width: 80px;
-    max-width: 75rem;
-    height: 0;
-    margin: 1.25rem auto;
-}
-
-.overview__hero-bottom {
-    text-transform: uppercase;
-    font-size: 17px;
-    color: #fff;
-    text-align: center;
-    font-weight: 400;
-    letter-spacing: 1px;
-    padding-bottom: 150px;
-    display: block;
-    font-family: 'Lato', sans-serif;
-    line-height: 1.5;
+    background: var(--light-gray);
 }
