Overview page done.

--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,34 @@ html {
 }
 
 body {
-  background-color: var(--light-gray)
+  /* background-color: var(--light-gray); */
+  font-size: 17px;
+  font-family: 'Lato', sans-serif;
+  color: var(--gray);
 }
 
 .row { 
   padding: 0 1em;
   max-width: 1000px;
+  margin: 0 auto;
+}
+
+p {
+  line-height: 1.6;
+  text-rendering: optimizeLegibility;
+  margin-bottom: 1rem;
+}
+
+a {
+  line-height: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+ul li {
+  font-size: 17px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  color: var(--gray);
+  margin-bottom: 14px;
 }
