--- a/src/components/WhoWeAre.css
+++ b/src/components/WhoWeAre.css
@@ -1,3 +1,43 @@
-.whoweare {
-    
+.whoweare__container {
+    background: #fff;
+    margin: 4em auto 1em;
+    padding: 0 1em;
+}
+
+.person-container {
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.whoweare__container h1 {
+    text-align: center;
+    font-size: 2rem;
+    margin-top: 1rem;
+    font-weight: 900;
+    font-family: 'Raleway', sans-serif;
+    color: var(--gray);
+    line-height: 1.4;
+    margin-bottom: .5rem;
+}
+
+.inner-div img {
+    transition: all .5s;
+    max-width: 100%;
+    height: auto;
+}
+
+.inner-div-text h5 {
+    font-size: 28px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    padding: 0 20px;
+    color: #fff;
+    transition: all .5s;
+    background: var(--orange);
+    width: 100%;
 }
