Getting closer to finalizing the Who We Are page

--- a/src/components/WhoWeAre.css
+++ b/src/components/WhoWeAre.css
@@ -1,7 +1,11 @@
 .whoweare__container {
-    background: #fff;
+    background: var(--light-gray);
     margin: 4em auto 1em;
     padding: 0 1em;
+}
+
+.whoweare__container--staff {
+    padding-bottom: 4em;
 }
 
 .person-container {
@@ -19,6 +23,17 @@
     color: var(--gray);
     line-height: 1.4;
     margin-bottom: .5rem;
+}
+
+.whoweare__container hr {
+    width: 100px;
+    border-bottom: 5px solid var(--orange);
+    max-width: 75rem;
+    height: 0;
+    margin: 1.25rem auto;
+    border-top: 0;
+    border-right: 0;
+    border-left: 0;
 }
 
 .inner-div img {
