--- a/src/components/WantToWorkHere.css
+++ b/src/components/WantToWorkHere.css
@@ -17,7 +17,7 @@
     border: none;
     color: #fff;
     border-radius: 3px;
-    padding: 1em 1.75em;
+    padding: .75em 1.5em;
     font-weight: 700;
     text-transform: uppercase;
     transition: all .25s;
@@ -26,7 +26,5 @@
 }
 
 .want-to-work-here__container a svg {
-    position: relative;
-    top: 3px;
-    left: 10px;
+    margin-left: 1em;
 }
