--- a/src/components/Jobs.css
+++ b/src/components/Jobs.css
@@ -36,3 +36,15 @@
     margin-bottom: .5rem;
     text-rendering: optimizeLegibility;
 }
+
+.positions-upper, .positions-lower {
+    margin-bottom: 40px;
+}
+
+.positions-lower {
+    background: #fff;
+    box-shadow: 0 5px 7px rgb(0, 0, 0, .13);
+    padding: 25px;
+    border-radius: 4px;
+}
+
