--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -1,3 +1,21 @@
-.blog {
-    
+.blog__container {
+    margin: 4em auto 1em;
+    padding: 1em 2em 2em;
+    box-shadow: 0 5px 7px rgb(0 0 0 / 13%);
+    max-width: 1000px;
+    background: #fff;
+}
+
+.blog__container h1.blog-h1 {
+    background: var(--orange);
+    padding: 0.125em 0.35em;
+    display: inline-block;
+    letter-spacing: -1px;
+    color: #fff;
+    margin-bottom: 0.5em;
+    font-size: 2rem;
+    margin-top: 1rem;
+    font-weight: 900;
+    font-family: 'Raleway', sans-serif;
+    line-height: 1.4;
 }
