--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -7,3 +7,10 @@
 .logo svg {
     width: 190px;
 }
+
+@media print, screen and (min-width: 47.5em) {
+    .logo {
+        margin-bottom: 1em;
+        margin-top: 1em;
+    }
+}
