--- a/src/components/NewSection.css
+++ b/src/components/NewSection.css
@@ -1,10 +1,10 @@
 .new-section {
-    padding: 4.5em 1em;
-    background: var(--light-gray);
+	padding: 4.5em 0 4.5em 1em;
+	background: var(--light-gray);
 }
 
 @media print, screen and (min-width: 47.5em) {
-    .new-section {
-        padding-left: 260px;
-    }
+	.new-section {
+		padding-left: 260px;
+	}
 }
