--- a/src/components/Icon.css
+++ b/src/components/Icon.css
@@ -7,6 +7,7 @@
 	text-decoration: none;
 	box-shadow: inset 0 4px 0 -1px #035;
 	transition: all 0.4s ease-in-out;
+	margin-bottom: 1em;
 }
 
 .icon a {
@@ -22,7 +23,7 @@
 }
 
 .icon__p {
-	font-size: 19px;
+	font-size: 17px;
 	font-family: "Lato", sans-serif;
 	font-weight: 300;
 	color: var(--gray);
