--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -1,51 +1,55 @@
 .menu {
-    position: fixed;
-    height: 100%;
-    top: 0;
-    left: -275px;
-    transition: all .5s;
-    padding: 0 0 1em 0;
-    border-right: 1px solid #ccc;
-    width: 275px;
-    z-index: 101;
-    background: var(--blue);
-    color: #fff;
+	position: fixed;
+	height: 100%;
+	top: 0;
+	left: -275px;
+	transition: all 0.5s;
+	padding: 0 0 1em 0;
+	border-right: 1px solid #ccc;
+	width: 275px;
+	z-index: 101;
+	background: var(--blue);
+	color: #fff;
 }
 
 .show-mobile-nav {
-    left: 0;
+	left: 0;
 }
 
 .menu nav ul {
-    list-style-type: none;
-    text-transform: uppercase;
-    font-family: 'Raleway', sans-serif;
-    font-size: 15px;
-    letter-spacing: 1px;
-    line-height: 28px;
-    list-style-position: outside;
-    margin-bottom: 19px;
+	list-style-type: none;
+	text-transform: uppercase;
+	font-family: "Raleway", sans-serif;
+	font-size: 15px;
+	letter-spacing: 1px;
+	line-height: 28px;
+	list-style-position: outside;
+	margin-bottom: 19px;
 }
 
 .menu nav ul li {
-    cursor: pointer;
-    padding: 7.5px 0 7.5px 22.5px;
-    transition: .25s ease;
-    border-bottom: 1px solid #dedede;
+	cursor: pointer;
+	padding: 7.5px 0 7.5px 22.5px;
+	transition: 0.25s ease;
+	border-bottom: 1px solid #dedede;
 }
 
 .menu nav ul li span {
-    padding-left: 24px;
+	padding-left: 24px;
 }
 
 .menu nav ul li:hover {
-    background-color: var(--menu-hover);
+	background-color: var(--menu-hover);
 }
 
 .menu nav ul li a {
-    color: #fff;
+	color: #fff;
 }
 
 .nav-bg {
-    color: var(--orange);
+	color: var(--orange);
+}
+
+.active-menu {
+	color: var(--orange);
 }
