--- a/src/components/PositionsLower.css
+++ b/src/components/PositionsLower.css
@@ -13,6 +13,10 @@
 	border-bottom: 1px solid #dedede;
 }
 
+.dropdown-active {
+	background-color: rgb(250, 250, 250);
+}
+
 .fa-position {
 	color: #ccc;
 }
