--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -1,7 +1,95 @@
 .contactus__container {
-    
+	padding: 0 1em;
+	padding-top: 2em;
+	padding-bottom: 4em;
+	max-width: 600px;
+	margin: 0 auto 1em;
+	background-color: #f0f0f0;
 }
 
 .contactus__container img {
-    width: 100%;
+	width: 100%;
+}
+
+.map-wrapper {
+	display: flex;
+	gap: 15px;
+	width: 100%;
+	height: 250px;
+	padding-left: 260px;
+}
+
+.map-wrapper .map {
+	flex: 1;
+}
+
+.contactus-row h1 {
+	margin-top: 1rem;
+	font-size: 2rem;
+	font-weight: 900;
+	line-height: 1.4;
+	font-style: normal;
+	text-rendering: optimizeLegibility;
+	font-family: "Raleway", sans-serif;
+	margin-bottom: 8px;
+}
+
+.contactus-row p {
+	font-size: 17px;
+	font-family: "Lato", sans-serif;
+	font-weight: 300;
+	color: var(--gray);
+}
+
+label {
+	font-weight: 400;
+	font-size: 14px;
+	margin-bottom: 5px;
+	display: block;
+	line-height: 21px;
+}
+
+input,
+textarea {
+	width: 100%;
+	display: block;
+	padding: 0.5em;
+	height: initial;
+	font-size: 17px;
+	resize: vertical;
+	border: 1px solid rgba(34, 36, 38, 0.15);
+	border-radius: 4px;
+	background-color: var(--white);
+	margin-bottom: 1.35em;
+}
+
+textarea {
+	min-height: 100px;
+}
+
+.form-group {
+	margin-bottom: 15px;
+}
+
+.btn-send {
+	text-align: center;
+}
+
+.btn-send-icon {
+	margin-left: 1em;
+}
+
+button {
+	margin-top: 2em;
+	background-color: #f26823;
+	border: none;
+	text-transform: uppercase;
+	padding: 0.75em 1.5em;
+	border-radius: 3px;
+	color: var(--white);
+	transition: all 0.25s;
+	margin-bottom: 1em;
+	font-size: 20px;
+	font-family: "Lato", sans-serif;
+	font-weight: 700;
 }
