--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -1,48 +1,77 @@
 .blog__container {
-    margin: 4em auto 1em;
-    padding: 1em 2em 2em;
-    box-shadow: 0 5px 7px rgb(0 0 0 / 13%);
-    max-width: 1000px;
-    background: #fff;
+	margin: 4em auto 1em;
+	padding: 1em 2em 2em;
+	box-shadow: 0 5px 7px rgb(0 0 0 / 13%);
+	max-width: 1000px;
+	background: #fff;
 }
 
 .blog__container h1.blog-h1 {
-    background: var(--orange);
-    padding: 0.125em 0.35em;
-    display: inline-block;
-    letter-spacing: -1px;
-    color: #fff;
-    margin-bottom: 0.5em;
-    font-size: 2rem;
-    margin-top: 1rem;
-    font-weight: 900;
-    font-family: 'Raleway', sans-serif;
-    line-height: 1.4;
+	background: var(--orange);
+	padding: 0.125em 0.35em;
+	display: inline-block;
+	letter-spacing: -1px;
+	color: #fff;
+	margin-bottom: 0.5em;
+	font-size: 2rem;
+	margin-top: 1rem;
+	font-weight: 900;
+	font-family: "Raleway", sans-serif;
+	line-height: 1.4;
 }
 .blog__container h2 {
-    line-height: 1;
-    margin-bottom: 10px;
-    font-size: 1.45rem;
-    margin-top: 2rem;
-    font-weight: 900;
-    font-family: 'Raleway', sans-serif;
+	line-height: 1;
+	margin-bottom: 10px;
+	font-size: 1.45rem;
+	margin-top: 2rem;
+	font-weight: 900;
+	font-family: "Raleway", sans-serif;
+}
+
+.blog__container p {
+	font-family: "Lato", sans-serif;
+	font-weight: 300;
 }
 
 a {
-    color: var(--gray);
+	color: var(--gray);
+}
+
+a span {
+	font-weight: 400;
 }
 
 .blog__container .post-details {
-    font-size: .875rem;
-    margin-bottom: 1rem;
+	font-size: 0.875rem;
+	margin-bottom: 1rem;
+	font-weight: 300;
 }
 
 .blog__container .post-details span {
-    color: #999;
+	color: #999;
 }
 
 article {
-    border-bottom: 1px dotted #999;
-    margin-bottom: 2rem;
-    padding-bottom: 2rem;
+	border-bottom: 1px dotted #999;
+	margin-bottom: 2rem;
+	padding-bottom: 2rem;
+}
+
+.view-article {
+	color: var(--turquoise);
+	font-weight: 400;
+}
+
+.pagination-container {
+	display: flex;
+	justify-content: center;
+}
+
+.pagination-container .page-number {
+	padding: 0 2px;
+}
+
+.active-page {
+	color: var(--gray);
+	font-weight: 300;
 }
