--- a/src/components/JobDetail/JobDetail.css
+++ b/src/components/JobDetail/JobDetail.css
@@ -4,6 +4,45 @@
 	border-radius: 5px;
 	margin-bottom: 5em;
 	margin: 4em auto 1em;
+	margin-bottom: 5em;
+	box-shadow: 0 5px 7px rgba(0, 0, 0, 0.125);
+}
+
+.job-detail-container h3 {
+	font-weight: 400;
+	margin-top: 2rem;
+	font-family: "Raleway", sans-serif;
+	color: var(--gray);
+	font-size: 1.1875rem;
+	line-height: 1.4;
+	margin-bottom: 0.5rem;
+	font-style: normal;
+	text-rendering: optimizeLegibility;
+}
+
+.job-detail-container p {
+	font-size: 17px;
+	font-family: "Lato", sans-serif;
+	font-weight: 300;
+	color: var(--gray);
+	margin-bottom: 1rem;
+	line-height: 1.6;
+	text-rendering: optimizeLegibility;
+}
+
+.job-detail-container ul {
+	list-style-type: square;
+	padding: 0 1em;
+	margin-left: 1rem;
+}
+
+.job-detail-container ul li {
+	margin-bottom: 14px;
+}
+
+.job-detail-container strong {
+	font-weight: 400;
+	line-height: inherit;
 }
 
 h1.job-details-title {
@@ -13,4 +52,16 @@ h1.job-details-title {
 	letter-spacing: -1px;
 	color: var(--white);
 	margin-bottom: 0.5em;
+	font-size: 2rem;
+	margin-top: 1rem;
+	font-weight: 900;
+	font-family: "Raleway", sans-serif;
+	line-height: 1.4;
+	font-style: normal;
+}
+
+ul.job-detail-benefits li a {
+	-webkit-font-smoothing: antialiased;
+	font-weight: 400;
+	color: var(--gray);
 }
