--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -18,13 +18,14 @@
 
 .menu nav ul {
 	list-style-type: none;
-	text-transform: uppercase;
-	font-family: "Raleway", sans-serif;
-	font-size: 15px;
-	letter-spacing: 1px;
-	line-height: 28px;
-	list-style-position: outside;
-	margin-bottom: 19px;
+	padding: 0;
+	margin: 0;
+	text-align: left;
+	margin-bottom: 1em;
+}
+
+.menu nav ul li:first-of-type {
+	border-top: 1px solid var(--med-gray);
 }
 
 .menu nav ul li {
@@ -32,6 +33,7 @@
 	padding: 7.5px 0 7.5px 22.5px;
 	transition: 0.25s ease;
 	border-bottom: 1px solid #dedede;
+	text-transform: uppercase;
 }
 
 .menu nav ul li span {
@@ -43,8 +45,9 @@
 	background-color: var(--menu-hover);
 }
 
-.menu nav ul a li {
+.menu nav ul li a {
 	color: #fff;
+	display: block;
 }
 
 .nav-bg {
