--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,70 @@ ul li {
 }
 
 .App {
-	background: #fff;
 	background: var(--light-gray);
+}
+
+.page-container {
+	padding: 1em 2em 2em;
+	background: #fff;
+	border-radius: 5px;
+	margin-bottom: 5em;
+	margin: 4em auto 1em;
+	margin-bottom: 5em;
+	box-shadow: 0 5px 7px rgba(0, 0, 0, 0.125);
+}
+
+.page-container h3 {
+	font-weight: 400;
+	margin-top: 2rem;
+	font-family: "Raleway", sans-serif;
+	color: var(--gray);
+	font-size: 1.1875rem;
+	line-height: 1.4;
+	margin-bottom: 0.5rem;
+	font-style: normal;
+	text-rendering: optimizeLegibility;
+}
+
+.page-container ul {
+	list-style: square;
+	padding: 0 1em;
+	margin-left: 1.25rem;
+	margin-bottom: 1rem;
+	line-height: 1.6;
+}
+
+strong {
+	font-weight: 400;
+	line-height: inherit;
+}
+
+.page-container ul li {
+	font-size: 17px;
+	font-family: "Lato", sans-serif;
+	font-weight: 300;
+	color: var(--gray);
+	margin-bottom: 14px;
+}
+
+.page-container hr {
+	height: 0;
+	margin: 1.25rem auto;
+	border-top: 0;
+	border-right: 0;
+	border-bottom: 1px solid #cacaca;
+	border-left: 0;
+	overflow: visible;
+	box-sizing: content-box;
+}
+
+.page-container h2 {
+	font-size: 1.45rem;
+	margin-top: 2rem;
+	font-weight: 900;
+	font-family: "Raleway", sans-serif;
+	color: var(--gray);
+	line-height: 1.4;
+	font-style: normal;
+	margin-bottom: 0.5rem;
 }
