--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,5 +1,5 @@
 .blog__container {
-	margin: 4em auto 1em;
+	margin: 4em auto 5em;
 	padding: 1em 2em 2em;
 	box-shadow: 0 5px 7px rgb(0 0 0 / 13%);
 	max-width: 1000px;
@@ -28,12 +28,15 @@
 	font-family: "Raleway", sans-serif;
 }
 
+.blog__container h2.post-title {
+}
+
 .blog__container p {
 	font-family: "Lato", sans-serif;
 	font-weight: 300;
 }
 
-a {
+.blog__container h2.post-title a {
 	color: var(--gray);
 }
 
@@ -47,8 +50,9 @@ a span {
 	font-weight: 300;
 }
 
-.blog__container .post-details span {
+div.blog__container .post-details span {
 	color: #999;
+	font-size: 0.875rem;
 }
 
 article {
@@ -74,4 +78,10 @@ article {
 .active-page {
 	color: var(--gray);
 	font-weight: 300;
+}
+
+.blog__container article h2.post-title span {
+	font-weight: 400;
+	line-height: inherit;
+	font-size: 1.45rem;
 }
