--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -28,32 +28,57 @@
 	border-top: 1px solid var(--med-gray);
 }
 
+.menu nav ul li:last-of-type {
+	border-bottom: none;
+}
+
 .menu nav ul li {
-	cursor: pointer;
-	padding: 7.5px 0 7.5px 22.5px;
-	transition: 0.25s ease;
-	border-bottom: 1px solid #dedede;
+	border-bottom: 1px solid var(--med-gray);
+	font-family: "Lato", sans-serif;
+	font-weight: 300;
+	color: var(--gray);
+}
+
+.menu nav ul li a {
+	color: #fff;
+	padding-left: 1.5em;
+	font-weight: 400;
+	transition: all 0.25s;
+	display: block;
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
+	font-family: "Raleway", sans-serif;
+	letter-spacing: 1px;
 	text-transform: uppercase;
+	font-size: 15px;
+	line-height: 28px;
 }
 
 .menu nav ul li span {
 	padding-left: 24px;
 	color: var(--white);
+	font-family: "Raleway", sans-serif;
+	font-size: 15px;
+	font-weight: 400;
 }
 
 .menu nav ul li:hover {
 	background-color: var(--menu-hover);
-}
-
-.menu nav ul li a {
-	color: #fff;
-	display: block;
+	text-decoration: none;
 }
 
 .nav-bg {
 	color: var(--orange);
 }
 
-.nav ul a li span.active-menu {
+.menu nav ul li a span.active-menu {
 	color: var(--orange);
+}
+
+.menu nav ul.sub-menu {
+	margin-bottom: 0;
+}
+
+ul.sub-menu li a span {
+	font-size: 13px;
 }
