--- a/src/App.css
+++ b/src/App.css
@@ -136,3 +136,19 @@ strong {
 	font-style: normal;
 	margin-bottom: 0.5rem;
 }
+
+.row {
+	max-width: 1000px;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+@media print, screen and (min-width: 47.5em) {
+	.row {
+		padding: 0 1.5em;
+	}
+
+	.main {
+		padding-left: 260px;
+	}
+}
