--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -13,7 +13,7 @@
 	line-height: 50px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	font-size: 2rem;
+	font-size: 3rem;
 	font-family: "Raleway", sans-serif;
 	font-weight: 900;
 }
@@ -44,6 +44,6 @@
 
 @media print, screen and (min-width: 47.5em) {
 	.overview__hero {
-		padding-left: 260px;
+		/* padding-left: 260px; */
 	}
 }
