--- a/src/components/WantToWorkHere/WantToWorkHere.css
+++ b/src/components/WantToWorkHere/WantToWorkHere.css
@@ -1,30 +1,39 @@
 .want-to-work-here__container {
-    padding: 5rem 1.6875rem;
-    text-align: center;
-    background: var(--light-gray);
+	padding: 5rem 1.6875rem;
+	text-align: center;
+	background: var(--light-gray);
 }
 
 .want-to-work-here__container p {
-    font-size: 24px;
-    font-weight: 900;
-    font-family: 'Raleway', sans-serif;
-    color: var(--gray);
+	font-size: 24px;
+	font-weight: 900;
+	font-family: "Raleway", sans-serif;
+	color: var(--gray);
 }
 
 .want-to-work-here__container > a {
-    display: inline-block;
-    background: var(--orange);
-    border: none;
-    color: #fff;
-    border-radius: 3px;
-    padding: .75em 1.5em;
-    font-weight: 700;
-    text-transform: uppercase;
-    transition: all .25s;
-    font-size: 20px;
-    font-family: 'Lato', sans-serif;
+	display: inline-block;
+	background: var(--orange);
+	border: none;
+	color: #fff;
+	border-radius: 3px;
+	padding: 0.75em 1.5em;
+	font-weight: 700;
+	text-transform: uppercase;
+	transition: all 0.25s;
+	font-size: 20px;
+	font-family: "Lato", sans-serif;
 }
 
 .want-to-work-here__container a svg {
-    margin-left: 1em;
+	margin-left: 1em;
+}
+
+@media print, screen and (min-width: 47em) {
+	.want-to-work-here__container p {
+		line-height: 30px;
+		margin-right: auto;
+		margin-left: auto;
+		width: 40%;
+	}
 }
