--- a/src/components/Jobs/JobPost.css
+++ b/src/components/Jobs/JobPost.css
@@ -1,32 +1,87 @@
 .job-post__container {
-    background: #fff;
-    padding: 25px;
-    border-radius: 4px;
-    box-shadow: 0 5px 7px rgb(0, 0, 0, .13);
-    margin-bottom: 24px;
-    transition: all .2s;
-    text-align: center;
+	background: #fff;
+	padding: 25px;
+	border-radius: 4px;
+	box-shadow: 0 5px 7px rgb(0, 0, 0, 0.13);
+	margin-bottom: 24px;
+	transition: all 0.2s;
+	text-align: center;
+}
+
+.job-post__container a {
+	position: relative;
+	letter-spacing: 2px;
+	font-size: 17px;
+	margin: 18px 0 0;
+	text-align: center;
+	background: var(--orange);
+	color: #fff;
+	font-weight: 700;
+	padding: 0.75em 1.5em;
+	text-transform: uppercase;
+	transition: all 0.25s;
+	width: 100%;
+	display: block;
 }
 
 .fa-icon {
-    font-size: 90px;
-    border: 2px solid var(--orange);
-    border-radius: 100%;
-    color: var(--orange);
-    text-align: center;
-    padding: 20px;
-    width: 90px !important;
+	font-size: 90px;
+	border: 2px solid var(--orange);
+	border-radius: 100%;
+	color: var(--orange);
+	text-align: center;
+	padding: 20px;
+	width: 90px !important;
 }
 
 .job-post__container h4 {
-    margin: 12px 0 0;
+	margin: 12px 0 0;
 }
 
 .job-post__container h5 {
-    color: var(--gray);
-    font-weight: 400;
-    font-size: 16px;
-    letter-spacing: 1px;
-    margin: 0 0 0 1px;
-    font-family: 'Lato', sans-serif;
+	color: var(--gray);
+	font-weight: 400;
+	font-size: 16px;
+	letter-spacing: 1px;
+	margin: 0 0 0 1px;
+	font-family: "Lato", sans-serif;
+}
+
+@media print, screen and (min-width: 62.5em) {
+	.job-post__container {
+		display: flex;
+		align-items: center;
+		width: 100%;
+		text-align: left;
+	}
+
+	.job-post__container .middle-section h4 {
+		font-size: 1.5625rem;
+	}
+
+	.job-post__container .middle-section h5 {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+
+	.job-post__container .middle-section {
+		flex: 1;
+		margin-left: 20px;
+	}
+
+	.job-post__container .details-container {
+		display: flex;
+		max-width: 500px;
+	}
+
+	.job-post__container a {
+		width: auto;
+		display: flex;
+		align-items: center;
+		margin: 0;
+	}
+	.job-post__container:hover {
+		box-shadow: 0 7px 12px rgba(0, 0, 0, 0.2);
+	}
 }
