--- a/src/components/PositionsLower/PositionsLower.css
+++ b/src/components/PositionsLower/PositionsLower.css
@@ -1,3 +1,7 @@
+.position__container {
+	border-bottom: 1px solid #dedede;
+}
+
 .positions-lower h4 {
 	font-size: 20px;
 	padding: 10px 50px 10px 10px;
@@ -10,7 +14,6 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	border-bottom: 1px solid #dedede;
 }
 
 .dropdown-active {
@@ -48,13 +51,11 @@
 }
 
 .show-ul {
-	/* height: 100%; */
 	max-height: 100vh;
 }
 
 h3.lower-title {
 	font-size: 20px;
-	border-bottom: 1px solid #dedede;
 	padding: 10px 50px 10px 10px;
 	margin: 0;
 	cursor: pointer;
@@ -64,4 +65,8 @@ h3.lower-title {
 	line-height: 1.4;
 	font-style: normal;
 	text-rendering: optimizeLegibility;
+}
+
+.position__container:last-of-type {
+	border-bottom: none;
 }
