--- a/src/App.css
+++ b/src/App.css
@@ -76,10 +76,15 @@ ul li {
 	padding: 1em 2em 2em;
 	background: #fff;
 	border-radius: 5px;
-	margin-bottom: 5em;
 	margin: 4em auto 1em;
 	margin-bottom: 5em;
 	box-shadow: 0 5px 7px rgba(0, 0, 0, 0.125);
+	max-width: 1000px;
+}
+
+.outer-container {
+	background-color: var(--light-gray);
+	padding-top: 4em;
 }
 
 .page-container h3 {
@@ -150,6 +155,10 @@ strong {
 
 	.main {
 		padding-left: 260px;
+	}
+
+	.page-container {
+		margin-top: 0;
 	}
 }
 
