--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -16,7 +16,6 @@
 	gap: 15px;
 	width: 100%;
 	height: 250px;
-	padding-left: 260px;
 }
 
 .map-wrapper .map {
@@ -92,4 +91,11 @@ button {
 	font-size: 20px;
 	font-family: "Lato", sans-serif;
 	font-weight: 700;
+}
+
+@media print, screen and (min-width: 62.5em) {
+	.outer-contactus__container {
+		background-color: var(--light-gray);
+		position: relative;
+	}
 }
