--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,22 +1,23 @@
 .header {
-    background: var(--blue);
-    background-size: 300px;
-    background-repeat: no-repeat;
-    background-position: -100px bottom;
-    z-index: 30;
-    overflow: auto;
-    position: relative;
+	background: var(--blue);
+	background-size: 300px;
+	background-repeat: no-repeat;
+	background-position: -100px bottom;
+	z-index: 30;
+	overflow: auto;
+	position: relative;
 }
 
 @media print, screen and (min-width: 47.5em) {
-    .header {
-        background-size: 660px;
-        background-position: -200px bottom;
-        width: 260px;
-        position: fixed;
-        overflow: visible;
-        box-shadow: 2px 0 10px rgb(0 0 0 / 50%);
-        height: 100%;
-        border-bottom: none;
-    }
+	.header {
+		background-size: 660px;
+		background-position: -200px bottom;
+		width: 260px;
+		position: fixed;
+		top: 0;
+		overflow: visible;
+		box-shadow: 2px 0 10px rgb(0 0 0 / 50%);
+		height: 100%;
+		border-bottom: none;
+	}
 }
