--- a/src/components/HowWeWork/HowWeWork.css
+++ b/src/components/HowWeWork/HowWeWork.css
@@ -28,3 +28,13 @@ h6 a {
 	text-decoration: none;
 	cursor: pointer;
 }
+
+@media print, screen and (min-width: 46.5em) {
+	.page-container h2 {
+		font-size: 2.5rem;
+	}
+
+	.page-container h3 {
+		font-size: 2rem;
+	}
+}
