--- a/src/components/JobDetail/JobDetail.css
+++ b/src/components/JobDetail/JobDetail.css
@@ -6,6 +6,7 @@
 	margin: 4em auto 1em;
 	margin-bottom: 5em;
 	box-shadow: 0 5px 7px rgba(0, 0, 0, 0.125);
+	max-width: 1000px;
 }
 
 .job-detail-container h3 {
@@ -64,4 +65,34 @@ ul.job-detail-benefits li a {
 	-webkit-font-smoothing: antialiased;
 	font-weight: 400;
 	color: var(--gray);
+}
+
+.job-detail-container button.primary-button {
+	margin-bottom: 5em;
+	margin-top: 2em;
+	background-color: var(--orange);
+	border: none;
+	color: var(--white);
+	font-weight: 700;
+	text-transform: uppercase;
+	transition: all 0.25s;
+	cursor: pointer;
+}
+
+.job-detail-container button:hover {
+	background-color: #d5500d;
+	color: #fff;
+	box-shadow: none;
+}
+
+@media print, screen and (min-width: 47.5em) {
+	.job-detail-container {
+		margin-top: 0;
+	}
+
+	.job-detail-container h3 {
+		font-weight: 400;
+		margin-top: 2rem;
+		font-size: 1.9375rem;
+	}
 }
