--- a/src/components/ApplyNow/ApplyNow.css
+++ b/src/components/ApplyNow/ApplyNow.css
@@ -1,3 +1,5 @@
+/* Apply Now styles */
+
 .apply-now {
 	background-color: rgb(240, 240, 240);
 	margin: 4em auto 1em;
@@ -127,6 +129,8 @@
 .apply-now input[type="file"] {
 	width: 100%;
 }
+
+/* Media queries */
 
 @media print, screen and (min-width: 47.5em) {
 	.apply-now {
